ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_profiles__empty_profiles_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_profiles.rs
expression: full
---
Profiles                                                                                  0 profiles

no profiles yet — create a master in ~/.agents-in-a-box/profiles/<slug>.md




















[j/k] move   [t] cycle tier
