ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/snapshot_profiles__loading_detail_snapshot.snap
---
source: crates/ainb-plugin-hangar/tests/snapshot_profiles.rs
expression: full
---
Profiles                                                                                  3 profiles
▶ author          balanced│author · loading…
  code-reviewer    premium│
  docs-writer         fast│
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
                          │
[j/k] move   [t] cycle tier
